# my_rust_api

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
migrations/: 20250704091404_create_users_table.sql
src/: main.rs
src/config/: mod.rs
src/db/: mod.rs
src/models/: booking_model.rs  dog_model.rs  owner_model.rs  user.rs
src/routes/: booking_route.rs  dog_route.rs  health_route.rs  mod.rs  owner_route.rs  user.rs
src/services/: booking_service.rs  db.rs  dog_service.rs  health_service.rs  mod.rs  owner_service.rs
src/util/: db.rs
