[package]
name = "my_rust_api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio       = { version = "1", features = ["macros"] }
axum        = "0.8.4"    # HTTP framework; swap for actix-web if you prefer
sqlx        = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
dotenvy     = "0.15"   # load .env
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"