[package]
name = "my_rust_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.31", features = ["serde"] }
futures-util = "0.3.31"
mongodb = "3.2.4"
serde = { version = "1.0.188", features = ["derive"] }
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "4", features = ["actix-web"] }
